--- a/web/index.html
+++ b/web/index.html
@@ -1,13 +1,14 @@
 <!doctype html>
-<html lang="en" class="h-full bg-white">
+<html class="h-max">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/Scripts-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Scripts | Your notes app</title>
   </head>
-  <body class="h-full">
-    <div id="root" class="bg-white dark:bg-gray-950 h-full flex flex-col"></div>
+  <body class="h-full bg-gray-50 dark:bg-gray-950">
+    <div id="root" class="h-full flex flex-col"></div>
+    <div id="n"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
